Always show popup menu when it is opened: - add additional class name `menuOpened` and ensure that menu is visible - new component `CardActionsMenuIcon` introduced and used for kanban/gallery/calendar card actions menu - increase `z-index` for `ContentBlock` when menu is opened to avoid overlaps

--- a/webapp/src/widgets/menuWrapper.scss
+++ b/webapp/src/widgets/menuWrapper.scss
@@ -6,6 +6,9 @@
         cursor: default;
     }
 
+    &.override.menuOpened {
+        display: block;
+    }
 
     *:first-child {
         /* stylelint-disable property-no-vendor-prefix*/
